# bongo-modulator

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  bongo-modulator.service  flake.nix
.github/workflows/: ci.yml
src/: ai.rs  cli.rs  config.rs  daemon.rs  frame.rs  ipc.rs  lib.rs  main.rs  onnx_eval.rs
tests/: cli.rs  ipc.rs
