[package]
name = "bongo-modulator"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
opencv = { version = "0.94", default-features = false, features = ["clang-runtime", "videoio", "objdetect", "dnn"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
