[package]
name = "bongo-modulator"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
candle-core = "0.9"
candle-onnx = "0.9"
nokhwa = { version = "0.10", features = ["input-native"] }
image = "0.25"
hf-hub = { version = "0.4.2", default-features = false, features = ["ureq"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
serial_test = "2"
